--- a/templates/core/moderacion_listado.html
+++ b/templates/core/moderacion_listado.html
@@ -1,9 +1,14 @@
-<table>
+<table border="1">
+    <tr>
+        <th>Edición</th>
+        <th>Recorrido</th>
+        <th>Estado</th>
+    </tr>
     {% for e in ediciones %}
     <tr>
-        <td>{{ e.linea.nombre }} - {{ e.nombre }}</td>
-        <td><a href="{% url 'apps.core.views.moderar_ediciones_id' id=e.recorrido.id %}">id</a></td>
-        <td><a href="{% url 'apps.core.views.moderar_ediciones_uuid' uuid=e.uuid %}">uuid</a></td>
+        <td><a href="{% url 'apps.core.views.moderar_ediciones_uuid' uuid=e.uuid %}">{{ e.date_update }}</a></td>
+        <td><a href="{% url 'apps.core.views.moderar_ediciones_id' id=e.recorrido.id %}">{{ e.linea.nombre }} - {{ e.nombre }}</a></td>
+        <td>{{ e.get_current_status_display }}</td>
     </tr>
     {% endfor %}
 </table>
