--- a/apps/core/static/css/buscador.css
+++ b/apps/core/static/css/buscador.css
@@ -74,7 +74,7 @@ div#mapa { width: 100%; height: 100%; }
     height: 20px;
     width: 20px;
     position: absolute;
-    left: 1px; 
+    left: 1px;
     top: 5px;
     background-position: -456px -118px;
     background-image: url("../img/glyphicons-halflings.png");
@@ -176,4 +176,12 @@ div.pagination-centered {
 
 div.olForeignContainer {
     z-index: 10;
+}
+
+.android-icon {
+    height: 16px;
+    width: 16px;
+    display: inline-block;
+    line-height: 16px;
+    vertical-align: text-top;
 }
