--- a/templates/core/seleccionar_ciudad.html
+++ b/templates/core/seleccionar_ciudad.html
@@ -222,7 +222,7 @@
                     <div>
                         <a class="social-icon facebook" href="http://facebook.com/cualbondi"></a>
                         <a class="social-icon twitter" href="http://twitter.com/cualbondi"></a>
-                        <a class="social-icon android" href="https://play.google.com/store/apps/details?id=com.cualbondi.buscador"></a>
+                        <a class="social-icon android" href="http://bit.ly/HfmNTT"></a>
                     </div>
                 </div>
             </div>
