--- a/templates/contenido.html
+++ b/templates/contenido.html
@@ -29,10 +29,12 @@
     <div class="container">
         <div class="row-fluid">
             <div id="bloque_izquierda" class="span9">
+                {% if show_android_alert %}
                 <div class="alert alert-success">
-                  <button type="button" class="close" data-dismiss="alert">&times;</button>
+                  <button type="button" class="close android-app-alert-close" data-dismiss="alert">&times;</button>
                   <strong>Atención!</strong> Ahora Cualbondi también en tu celular! Descargate la App para Android haciendo click <a href="http://bit.ly/HfmNTT">acá</a>
                 </div>
+                {% endif %}
                 {% block bloque_izquierda %}{% endblock %}
             </div>
             <div id="bloque_derecha" class="span3">
