--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -25,10 +25,12 @@
             </ul>
             <div class="tab-content">
                 <div class="tab-pane active" id="1">
+                    {% if show_android_alert %}
                     <div class="alert alert-success">
-                      <button type="button" class="close" data-dismiss="alert">&times;</button>
+                      <button type="button" class="close android-app-alert-close" data-dismiss="alert">&times;</button>
                       <strong>Atención!</strong> Ahora Cualbondi también en tu celular! Descargate la App para Android haciendo click <a href="http://bit.ly/HfmNTT">acá</a>
                     </div>
+                    {% endif %}
                     <input type="text" id="inputDesde" class="input-block-level" placeholder="Desde" {% if desde %}value="{{desde}}"{% endif %}>
                     <input type="text" id="inputHasta" class="input-block-level" placeholder="Hasta" {% if hasta %}value="{{hasta}}"{% endif %}>
                     <p><small>Ejemplos: {{ ciudad_actual.sugerencia }}</small></p>
