--- a/templates/core/ver_linea.html
+++ b/templates/core/ver_linea.html
@@ -4,7 +4,16 @@
 {% block title %}Línea {{linea_actual.nombre|title}} en {{ciudad_actual.nombre|title}} - Cualbondi{% endblock %}
 {% block meta_description %}Toda la información sobre ramales, recorridos, paradas, horarios y tarifas de la línea {{linea_actual.nombre|title}} que pasa por la ciudad de {{ciudad_actual.nombre|title}}.{% endblock %}
 
+{% block head-attrs %} prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# cualbondi: http://ogp.me/ns/fb/cualbondi#"{% endblock %}
+
 {% block custom_top_scripts %}
+    <meta property="fb:app_id" content="516530425068934" /> 
+    <meta property="og:type"   content="cualbondi:linea" /> 
+    <meta property="og:url"    content="{{ base_url }}{{ request.get_full_path }}" /> 
+    <meta property="og:title"  content="Línea {{linea_actual.nombre|title}}" /> 
+    <meta property="og:description"  content="Toda la información sobre ramales, recorridos, paradas, horarios y tarifas de la línea {{linea_actual.nombre|title}} que pasa por la ciudad de {{ciudad_actual.nombre|title}}" /> 
+    <meta property="og:image"  content="" /> 
+
     <script src="http://openlayers.org/api/OpenLayers.js"></script>
     <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>
     <link rel="stylesheet" href="http://openlayers.org/dev/theme/default/style.css" type="text/css" />
