Agregar slider con imagenes en mapa y contenido

--- a/apps/core/static/css/estilo.css
+++ b/apps/core/static/css/estilo.css
@@ -18,3 +18,5 @@ h1, h2, h3, h4, h5, h6 { font-family: 'geoslab_medium_normal'; }
 .sidebar-nav {
     padding: 9px 0;
 }
+
+.bx-viewport { margin: 0px 0px 15px 5px; }
