--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,8 @@
 		<meta name="description" content="{% block meta_description %}Buscador de recorridos de bondis, colectivos, micros en Argentina.{% endblock %}">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="{{ STATIC_URL }}css/bootstrap.custom.min.css" rel="stylesheet" type="text/css" />
+        <link href="{{ STATIC_URL }}css/bootstrap.custom.min.css" rel="stylesheet" type="text/css" />
+        <link href="{{ STATIC_URL }}css/jquery.bxslider.css" rel="stylesheet" type="text/css" />
 
         <meta name="google-site-verification" content="NVSk_0zcZdYua2ILJ4L0DvspOCmHujouihZPlo3mDco">
         <link href="https://plus.google.com/117455886911192315188" rel="publisher">
@@ -42,6 +43,7 @@
         <script src="{{ STATIC_URL }}js/jquery-1.9.0.min.js"></script>
         <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
         <script src="{{ STATIC_URL }}js/jquery.cookie.js"></script>
+        <script src="{{ STATIC_URL }}js/jquery.bxslider.min.js"></script>
 
 		{% block custom_scripts %}{% endblock %}
 
