--- a/templates/contenido.html
+++ b/templates/contenido.html
@@ -42,6 +42,8 @@
                         </script>
                     </div>
 
+                    {% include "slider_anuncios.html" %}
+
                     <!--CAJA DE FACEBOOK-->
                     <!--[if (!IE)|(gt IE 7)]-->
                         <div style="margin-bottom:15px;"><iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fcualbondi&amp;width=300&amp;height=360&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=false&amp;header=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:300px; height:360px;" allowTransparency="true"></iframe></div>
@@ -130,8 +132,13 @@
                     $('#login_form').submit();
                 }
             })
-            $(".alert-message").alert()
 
+            $('.slider-anuncios').bxSlider({
+                pager: false,
+                auto: true,
+                autoHover: true,
+                controls: false
+            });
         })
 
     <!-- DISQUS Code -->
