--- a/templates/core/ver_linea.html
+++ b/templates/core/ver_linea.html
@@ -5,9 +5,11 @@
 {% block meta_description %}Toda la información sobre ramales, recorridos, paradas, horarios y tarifas de la línea {{linea_actual.nombre|title}} que pasa por la ciudad de {{ciudad_actual.nombre|title}}.{% endblock %}
 
 {% block custom_top_scripts %}
+    {% if request.GET.dynamic_map %}
     <script src="http://openlayers.org/api/OpenLayers.js"></script>
     <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>
     <link rel="stylesheet" href="http://openlayers.org/dev/theme/default/style.css" type="text/css" />
+    {% endif %}
 {% endblock %}
 
 {% block bloque_izquierda %}
@@ -19,7 +21,7 @@
 
     <h1>Linea {{linea_actual.nombre}} de {{ciudad_actual.nombre}}</h1>
 
-    <div class="thumbnail"><div id="map" style="background:lightblue; height:300px;"></div></div>
+    <div class="thumbnail"><div id="map" style="background:lightblue; height:300px;">{% if not request.GET.dynamic_map %}<img src="/{{ img_map.url }}" alt="" />{% endif %}</div></div>
     <br />
 
     {% if linea_actual.info_empresa and linea_actual.info_terminal %}
@@ -63,6 +65,7 @@
 
 {% block custom_scripts %}
 {{ block.super }}
+{% if request.GET.dynamic_map %}
 <script type="text/javascript">
     $(document).ready(function(){
         //Proyeccion que se necesita para transformar proyecciones mas adelante
@@ -96,4 +99,5 @@
         map.zoomToExtent(extent);
     });
 </script>
+{% endif %}
 {% endblock %}
