--- a/templates/core/ver_recorrido.html
+++ b/templates/core/ver_recorrido.html
@@ -4,12 +4,15 @@
 {% block meta_description %}Toda la información sobre paradas, horarios y tarifas del recorrido {{recorrido_actual.nombre|title}} de la línea {{linea_actual.nombre|title}} que pasa por la ciudad de {{ciudad_actual.nombre|title}}.{% endblock %}
 
 {% block custom_top_scripts %}
+    {% if request.GET.dynamic_map %}
     <script src="http://openlayers.org/api/OpenLayers.js"></script>
     <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>
     <link rel="stylesheet" href="http://openlayers.org/dev/theme/default/style.css" type="text/css" />
+    {% endif %}
 {% endblock %}
 
 {% block custom_scripts %}
+    {% if request.GET.dynamic_map %}
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.RC4.min.js"></script>
     <script>
         var recorrido_actual_id = {{recorrido_actual.id}};
@@ -24,6 +27,7 @@
         var STATIC_URL = {{ STATIC_URL }};
     </script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/vr-1.0.js"></script>
+    {% endif %}
 {% endblock %}
 
 {% block bloque_izquierda %}
@@ -37,7 +41,7 @@
     <h1>Recorrido {{linea_actual.nombre}} {{recorrido_actual.nombre}} de {{ciudad_actual.nombre}}</h1>
     {% if recorrido_actual.inicio and recorrido_actual.fin %}<h3>desde {{recorrido_actual.inicio}} hasta {{recorrido_actual.fin}}</h3>{% endif %}
 
-    <div class="thumbnail"><div id="map" style="background:lightblue; height:300px;"></div></div>
+    <div class="thumbnail"><div id="map" style="background:lightblue; height:300px;">{% if not request.GET.dynamic_map %}<img src="/{{ img_map.url }}" alt="" />{% endif %}</div></div>
     <br />
 
     {% if recorrido_actual.descripcion %}
