fix ad off-screen

--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -120,7 +120,7 @@
         </div>
     </div>
     <div id="bloque_derecha">
-        <div style="position:absolute; z-index: 1000; top: 70%; left: 0;">
+        <div style="position:absolute; z-index: 1000; bottom: -4px; left: 0;">
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
             <!-- buscador_mapa_vertical -->
             <ins class="adsbygoogle"
